# chess_opening_assistant

./: .env.example  .gitignore  README.md  api.py  chat_models.py  llm.py  pyproject.toml  start.sh  wikibooks_openings.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
agent/: client.py
backend/agent/: client.py  prompt_bundle.py  prompts.py  tools.py
backend/app/: app.py
backend/data_preparation/: clean_wikibooks.py
chess_position_profile/: eco_codes.py  position_profile.py
chess_utils/: eco_codes.py  position_profile.py
data_preparation/: clean_wikibooks.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Board.jsx  Chat.jsx
src/agent/: client.py  doc_models.py  prompt_bundle.py  prompts.py  tools.py
src/chess_utils/: board_state.py  eco_codes.py  position_profile.py
src/data_preparation/: clean_wikibooks.py
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: Chat.jsx
tests/agent/: test_client_integration.py  test_data.jsonl  test_tools.py
tests/chess_position_profile/: test_eco_codes.py  test_position_profile.py
tests/chess_utils/: test_board_state.py  test_eco_codes.py  test_position_profile.py
tests/data_preparation/: test_clean_wikibooks.py
tests/eval/: build_dataset.py  dataset.py  eval_set.json  eval_set.jsonl  metrics.py  results.jsonl  run_eval.py  sync.py  test_eval_dataset.py  upload_dataset.py
