[project]
name = "chess-opening-assistant"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "chess>=1.11.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.5",
    "mwparserfromhell>=0.7.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "N",      # pep8-naming
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults (common with FastAPI Depends)
    "SIM108", # ternary instead of if-else (often less readable)
    "RET504", # unnecessary assignment before return (hurts debuggability)
    "N803",   # argument name should be lowercase (clashes with DataFrames, X, y)
    "N806",   # variable in function should be lowercase (same reason)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports for re-exports
"tests/*" = ["S101"]      # allow asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["chess-opening-assistant"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (e.g. the LLM API); excluded from CI",
]
